--- a/content/publication/PoE Tagger/cite.bib
+++ b/content/publication/PoE Tagger/cite.bib
@@ -1,8 +1,10 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
-}
+@INPROCEEDINGS{9824252,
+  author={Basa Pati, Peeta and Shreyas, V},
+  booktitle={2022 IEEE 7th International conference for Convergence in Technology (I2CT)}, 
+  title={Speech to Equation Conversion using a PoE Tagger}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={1-4},
+  doi={10.1109/I2CT54291.2022.9824252}
+  }
